--- a/src/app/components/recipe-add/recipe-add.component.html
+++ b/src/app/components/recipe-add/recipe-add.component.html
@@ -1,1 +1,44 @@
-<p>recipe-add works!</p>
+
+<div class="panel panel-default">
+    <div class="panel-heading">
+        <h4>Add new recipe</h4>
+    </div>
+    <div class="panel-body">
+        <div class="form-group">
+            <input type="text" class="form-control" placeholder="Recipe name" #name>
+        </div>
+        <div class="form-group">
+            <textarea name="" id="" cols="30" rows="4" class="form-control" #description></textarea>
+        </div>
+        <div class="form-group">
+            <div class="input-group">
+                <div class="row">
+                    <div class="col-xs-10">
+                            <input type="text" class="form-control" placeholder="Ingredient name" #ingredientName>
+                    </div>
+                    <div class="col-xs-2">
+                            <input type="text" class="form-control" placeholder="Ingredient amount." #ingredientAmount>
+                    </div>
+                </div>
+                
+                <span class="input-group-btn">
+                    <button class="btn btn-default" type="button" (click)="addIngredient()"><span class="glyphicon glyphicon-plus"></span></button>
+                </span>
+            </div>
+        </div>
+        <button class="btn btn-primary" (click)="submit()">Add recipe</button>
+        <button class="btn btn-danger">Cancel</button>
+    </div>
+    <div class="panel-footer">
+            <div class="row">
+                    <div class="col-xs-6">
+                        <ul class="list-group ingredients-list">
+                            <li *ngFor="let ing of ingredients" class="list-group-item">{{ing.name}}  - {{ing.amount}} 
+                                <span class="badge"><span class="glyphicon glyphicon-remove"></span></span>
+                                
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+    </div>
+</div>
