--- a/src/app/pages/recipe/recipe.component.html
+++ b/src/app/pages/recipe/recipe.component.html
@@ -10,6 +10,7 @@
     <div class="col-md-8">
         <div class="container">
             <h1>Recipe list</h1>
+            <app-recipe-item *ngFor="let recipe of recipes" [recipe]="recipe"></app-recipe-item>
         </div>
     </div>
 </div>
