--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,11 +9,12 @@ h1{
     font-weight: 400
 }
 
-// [class^='col-md-']{
-//     padding-left: 0;
-// }
+[class^='col-md-']{
+    padding-left: 0;
+}
 
 .container{
+    padding-left: 0;
     .jumbotron{
         border-radius: 0;
         background: linear-gradient(to right, rgba(255, 255, 0, .5), rgba(0,0,0,.5)), url('./assets/images/header-img.webp');
@@ -30,7 +31,66 @@ h1{
 
 .btn{
     border-radius: 0;
+    margin-right: 10px;
     &-lg{
         border-radius: 0;
     }
 }
+
+.thumbnail{
+    border-radius: 0;
+}
+
+.recipe-item-container{
+    .row{
+        [class^='col-md-']{
+            padding-left: 0;
+            
+        }
+        .recipe-action{
+            height: 213px;
+            text-align: center;
+            padding: 20px;
+            button{
+                border: 1px solid #ccc;
+                border-radius: 50px;
+                height: 50px;
+                width: 50px;
+                box-shadow: 0px 0px 4px 4p;
+                &:focus{
+                    outline: none;
+                }
+            }
+        }
+        .list-group{
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            &-item{
+                border: 0;
+                padding: 5px 15px;
+                .glyphicon{
+                    &-ok{
+                        color: #B3CBB9
+                    }
+                }
+            }
+        }
+    }
+}
+
+.ingredients-list{
+    .list-group-item{
+        margin-bottom: 5px;
+        &:last-child{
+            border-bottom-left-radius:0;
+            border-bottom-right-radius:0;
+        }
+        &:first-child{
+            border-bottom-left-radius:0 !important;
+            border-bottom-right-radius:0;
+        }
+    }
+    
+}
+
