restart the project initial commit

--- a/src/app/pages/shop/shop.component.html
+++ b/src/app/pages/shop/shop.component.html
@@ -1,7 +1,1 @@
-<div class="row">
-    <div class="col-md-8">
-        <div class="container">
-            <h1>Shopping list</h1>
-        </div>
-    </div>
-</div>
+<p>shop works!</p>
