--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -1,36 +1,40 @@
 <nav class="navbar navbar-default">
-        <div class="container">
-          <!-- Brand and toggle get grouped for better mobile display -->
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" routerLink="/">Recipe book</a>
-          </div>
-      
-          <!-- Collect the nav links, forms, and other content for toggling -->
-          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-              <li routerLinkActive="active"><a routerLink="/recipes">Recipes <span class="sr-only">(current)</span></a></li>
-              <li routerLinkActive="active"><a routerLink="/shop">Shopping list</a></li>
-            </ul>
-            
-            <ul class="nav navbar-nav navbar-right">
-              <li><a href="#">Login</a></li>
-              <li class="dropdown" appDropdown>
-                <a  class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Account <span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                  <li><a >Action</a></li>
-                  <li><a >Another action</a></li>
-                  <li><a >Something else here</a></li>
-                  <li role="separator" class="divider"></li>
-                  <li><a >Separated link</a></li>
-                </ul>
-              </li>
-            </ul>
-          </div><!-- /.navbar-collapse -->
-        </div><!-- /.container-fluid -->
-      </nav>
+  <div class="container">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+        data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" routerLink="/">Recipe book</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li routerLinkActive="active" *ngIf="isAuth"><a routerLink="/recipes">Recipes <span
+              class="sr-only">(current)</span></a></li>
+        <li routerLinkActive="active"><a routerLink="/shop">Shopping list</a></li>
+      </ul>
+
+      <ul class="nav navbar-nav navbar-right">
+        <li *ngIf="!isAuth"><a routerLink="/auth">Login</a></li>
+        <li *ngIf="isAuth"><a routerLink="/auth">Logout</a></li>
+        <li class="dropdown" appDropdown *ngIf="isAuth">
+          <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+            aria-expanded="false">Account <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a routerLink="/recipes/add">Add recipe</a></li>
+            <li><a (click)="onSaveRecipe()">Save recipes</a></li>
+            <li><a (click)="fetchRecipes()">Fetch</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a>Separated link</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
